--- a/src/index.html
+++ b/src/index.html
@@ -15,15 +15,40 @@
 <body>
     <div class="wrapper">
         <header class="header">
-
+            <p><i class="iconfont">&#xe729;</i></p>
+            <p><span>推荐</span>|<span>北京</span></p>
+            <p><i class="iconfont">&#xe6f5;</i></p>
         </header>
         <section class="section">
-
+            <div class="banner">
+                <img src="imgs/1.png" alt="">
+            </div>
+            <div class="right">
+                <dl>
+                    <dt><i class="iconfont">&#xe67c;</i></dt>
+                    <dd>3.7W</dd>
+                </dl>
+                <dl>
+                    <dt><i class="iconfont">&#xe60d;</i></dt>
+                    <dd>852</dd>
+                </dl>
+                <dl>
+                    <dt><i class="iconfont">&#xe657;</i></dt>
+                    <dd>3.7W</dd>
+                </dl>
+            </div>
         </section>
         <footer class="footer">
-
+            <ul>
+                <li>首页</li>
+                <li>关注</li>
+                <li><i class="iconfont">&#xe6fb;</i></li>
+                <li>消息</li>
+                <li>我的</li>
+            </ul>
         </footer>
     </div>
+
 </body>
 
 </html>
